# pi-cloud-components/cloud-server/swagger_server/controllers/default_controller.py
@@ -1,6 +1,8 @@
 import connexion
 import six
 
+from swagger_client.models.unauthorized_response import UnauthorizedResponse
+from swagger_server.logic.handlers import authorization_check
 from swagger_server.models.added import Added  # noqa: E501
 from swagger_server.models.coordinate import Coordinate  # noqa: E501
 from swagger_server.models.error import Error  # noqa: E501
@@ -18,6 +20,7 @@ def add_coordinates(coordinates):  # noqa: E501
 
     :rtype: Added
     """
+    if not authorization_check(connexion.request.headers): return UnauthorizedResponse("")
     if connexion.request.is_json:
         coordinates = [Coordinate.from_dict(d) for d in connexion.request.get_json()]  # noqa: E501
     return 'do some magic!'
