# pi-cloud-components/cloud-server/swagger_server/models/unauthorized_response.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UnauthorizedResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message: str=None):  # noqa: E501
+        """UnauthorizedResponse - a model defined in Swagger
+
+        :param message: The message of this UnauthorizedResponse.  # noqa: E501
+        :type message: str
+        """
+        self.swagger_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UnauthorizedResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UnauthorizedResponse of this UnauthorizedResponse.  # noqa: E501
+        :rtype: UnauthorizedResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this UnauthorizedResponse.
+
+
+        :return: The message of this UnauthorizedResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this UnauthorizedResponse.
+
+
+        :param message: The message of this UnauthorizedResponse.
+        :type message: str
+        """
+        if message is None:
+            raise ValueError("Invalid value for `message`, must not be `None`")  # noqa: E501
+
+        self._message = message
